made changes of Jenny in post page, fixed unlock button, added lock indication to posts in feed, feed fixed to work with plain to prevent leaks and to shorten the text if too long

--- a/src/app/components/unlock-button/unlock-button.styles.less
+++ b/src/app/components/unlock-button/unlock-button.styles.less
@@ -4,14 +4,14 @@
 @ringBackgroundColor: #fafafa;
 @height: 30px;
 
-.btn-bch-upvote-container {
+.btn-bch-unlock-container {
   cursor: pointer;
   position: relative;
-  width: 130px;
+  width: 275px;
   height: @height;
 }
 
-.btn-bch-upvote-container > button {
+.btn-bch-unlock-container > button {
   position: absolute;
   left: 0;
   padding: 2px 5px 2px 20px;
@@ -20,15 +20,15 @@
   height: @height;
   outline: none !important;
   box-shadow: none !important;
-  min-width: 115px;
-  width: 115px;
-  max-width: 115px;
+  min-width: 260px;
+  width: 260px;
+  max-width: 260px;
   margin-left: 12px;
   float: left;
   overflow: hidden;
 }
 
-.btn-bch-upvote-container > .bch-icon {
+.btn-bch-unlock-container > .bch-icon {
   width: @height;
   height: @height;
   left: 1px;
@@ -36,21 +36,20 @@
   z-index: 10;
 }
 
-.btn-bch-upvote-container > button > .bch-upvote-button-loading {
+.btn-bch-unlock-container > button > .bch-unlock-button-loading {
   display: none;
 }
 
-.btn-bch-upvote-container.active > button > .bch-upvote-button-loading {
+.btn-bch-unlock-container.active > button > .bch-unlock-button-loading {
   display: inline-block;
 }
 
-.btn-bch-upvote-container.active > button > .bch-upvote-button-text,
-.btn-bch-upvote-container.active > button > .bch-upvote-button-amount {
+.btn-bch-unlock-container.active > button > .bch-unlock-button-text,
+.btn-bch-unlock-container.active > button > .bch-unlock-button-amount {
   display: none;
 }
 
-.btn-bch-upvote-container > button > .bch-upvote-button-text,
-.btn-bch-upvote-container > button > .bch-upvote-button-amount {
+.btn-bch-unlock-container > button > .bch-unlock-button-amount {
   position: absolute;
   top: 4px;
   left: 0;
@@ -61,47 +60,58 @@
   transition: all 0.3s ease-in-out;
 }
 
-.btn-bch-upvote-container > button > .bch-upvote-button-amount,
-.btn-bch-upvote-container > button > .bch-upvote-button-text,
-.btn-bch-upvote-container > button > .bch-upvote-button-loading {
+.btn-bch-unlock-container > button > .bch-unlock-button-text {
+  position: absolute;
+  top: 4px;
+  left: 0;
+  margin-left: 76px;
+  width: 116px;
+  padding-left: 4px;
+  padding-right: 4px;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-bch-unlock-container > button > .bch-unlock-button-amount,
+.btn-bch-unlock-container > button > .bch-unlock-button-text,
+.btn-bch-unlock-container > button > .bch-unlock-button-loading {
   text-transform: uppercase;
   font-weight: bold;
 }
 
-.btn-bch-upvote-container > button > .bch-upvote-button-amount {
+.btn-bch-unlock-container > button > .bch-unlock-button-amount {
   opacity: 1;
   transform: translate(0, 0);
 }
 
-.btn-bch-upvote-container > button > .bch-upvote-button-text {
+.btn-bch-unlock-container > button > .bch-unlock-button-text {
   opacity: 0;
   transform: translate(100%, 0);
 }
 
-.btn-bch-upvote-container:hover > button > .bch-upvote-button-amount {
+.btn-bch-unlock-container:hover > button > .bch-unlock-button-amount {
   opacity: 0;
   transform: translate(100%, 0);
 }
 
-.btn-bch-upvote-container:hover > button > .bch-upvote-button-text {
+.btn-bch-unlock-container:hover > button > .bch-unlock-button-text {
   opacity: 1;
   transform: translate(0, 0);
 }
 
-.btn-bch-upvote-container.active > .bch-icon,
-.btn-bch-upvote-container.active > .bch-icon-loading,
-.btn-bch-upvote-container.disabled > .bch-icon,
-.btn-bch-upvote-container.disabled > .bch-icon-loading
+.btn-bch-unlock-container.active > .bch-icon,
+.btn-bch-unlock-container.active > .bch-icon-loading,
+.btn-bch-unlock-container.disabled > .bch-icon,
+.btn-bch-unlock-container.disabled > .bch-icon-loading
 {
   cursor: not-allowed;
 }
 
-.btn-bch-upvote-container.disabled > .btn-bch-upvote {
+.btn-bch-unlock-container.disabled > .btn-bch-unlock {
   opacity: .65;
 }
 
 
-.btn-bch-upvote-container.active > .bch-icon-loading {
+.btn-bch-unlock-container.active > .bch-icon-loading {
   display: initial;
 }
 
@@ -122,13 +132,13 @@
   animation: spinoffPulse 1s infinite linear;
 }
 
-.btn-bch-upvote-container > button {
+.btn-bch-unlock-container > button {
   background: @backgroundColor;
   color: @textColor !important;
 }
 
-.btn-bch-upvote-container:hover,
-.btn-bch-upvote-container > button:hover {
+.btn-bch-unlock-container:hover,
+.btn-bch-unlock-container > button:hover {
   color: @textColor !important;
 }
 
